# miniFASTA

./: .gitignore  DEPENDENCIES.md  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: black.yml  tests-uv.yml  tests.yml
src/miniFasta/: __init__.py  _miniFasta.py  _reader.py  _writer.py  miniFasta.py
tests/: test_fasta.py  test_fasta_read.py
tests/test_data/: test.fasta.tar  test.multi.tar  test0.fasta  test1.fasta  test2.fasta  test3.fasta
