[metadata]
name = miniFasta
description = An easy FASTA object handler, reader, writer and translator for small to medium size projects without dependencies.
author = Jules Kreuer / not_a_feature
license = gpl-3.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    miniFasta
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9

[flake8]
max-line-length = 120
