[metadata]
name = miniFasta
version = 2.2.0
description = An easy FASTA toolbox for small to medium size projects without dependencies.
long_description = file: README.md
long_description_content_type=text/markdown
keywords = FASTA, reader, bio, bioinformatics
home-page = https://github.com/not-a-feature/miniFASTA
author = Jules Kreuer / not_a_feature
license = gpl-3.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    miniFasta
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9
    tox>=3.20

[options.package_data]
miniFASTA = py.typed


[flake8]
max-line-length = 120

